<resources>
    <string name="app_name">CentroPokemon</string>
    <string name="ash">Ash ketchum</string>
    <string name="brock">Brock</string>
    <string name="pro_oak">Profesor Oak</string>
    <string name="misty">Misty</string>
    <string name="detalle_pokemon">Detalle de Pokemon</string>
    <string name="detalle_entrenador">Detalle de Entrenador</string>
    <string name="mensaje_guardado">Guardado exitosamente!</string>
    <string name="positivo">Positivo</string>
    <string name="negativo">Negativo</string>
    <string name="incierto">Incierto</string>
    <string name="mensaje_error">Por favor complete el campo requerido</string>
    <string name="eliminar_pokemon">Eliminar pokemon</string>
    <string name="eliminar_entrenador">Eliminar entrenador</string>
    <string name="seguro">¿Estás seguro de que quieres eliminar ?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="guardado_entrenador">Entrenador guardado</string>
    <string name="guardado_pokemon">Pokemon guardado</string>
    <string name="nombre">Nombre</string>
    <string name="ciudad">Ciudad</string>
    <string name="edad">Edad</string>
    <string name="sexo">Sexo</string>
    <string name="elemento">Elemento</string>
    <string name="entrenador">Entrenador</string>
    <string name="nivel">Nivel</string>
    <string name="registra_entrenador">Registrar Entrenador</string>
    <string name="registrar_pokemon">Registrar Pokemon</string>
    <string name="id_entrenador">ID entrenador</string>
    <string name="id_pokemon">ID pokemon</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="borra">Borrar</string>
    <string name="normal">Normal</string>
    <string name="fuego">Fuego</string>
    <string name="agua">Agua</string>
    <string name="electricidad">Electricidad</string>
    <string name="entrenamiento">Centro de entrenamiento</string>
    <string name="entrenadores_pokemones">Entrenadores y pokemones</string>
    <string name="agregar_entrenador">Agregar entrenador</string>
    <string name="agregar_pokemon">Agregar pokemon</string>


    <string-array name="spEntrenamor">
        <item>@string/ash</item>
        <item>@string/brock</item>
        <item>@string/pro_oak</item>
        <item>@string/misty</item>
    </string-array>
</resources>