<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearPokemon">

    <include layout="@layout/toolbar">

    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registrar_pokemon"
            android:textColor="@color/colorRedPokemos"
            android:textSize="36sp"
            android:textStyle="bold"
            android:padding="10dp"/>



        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_pokemon"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrenador"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbEntrenador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nivel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNivel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elemento"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19dp">

            <CheckBox
                android:id="@+id/cbNormal"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorRedPokemos"
                android:text="@string/normal" />

            <CheckBox
                android:id="@+id/cbFuego"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorRedPokemos"
                android:text="@string/fuego" />

            <CheckBox
                android:id="@+id/cbElectrico"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorRedPokemos"
                android:text="@string/electricidad" />

            <CheckBox
                android:id="@+id/cbAgua"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorRedPokemos"
                android:text="@string/agua" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="guardar"
                android:backgroundTint="@color/colorBlackePokemos"
                android:textColor="@color/colorWhithePokemos"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borrar"
                android:backgroundTint="@color/colorBlackePokemos"
                android:textColor="@color/colorWhithePokemos"
                android:text="@string/borra" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>